# Ramp

./: CMakeLists.txt  README.md
Ramp/: CMakeLists.txt
Ramp/src/: main.cpp
RampLib/: CMakeLists.txt
RampLib/include/: InputParser.h  Pattern.h  PatternDrawer.h  Types.h
RampLib/src/: Display.cpp  InputParser.cpp  Pattern.cpp  PatternDrawer.cpp
UnitTests/: CMakeLists.txt
UnitTests/include/: Constants.h
UnitTests/src/: InputParserTests.cpp  PatternTests.cpp  RGB565ColourTests.cpp
